@@ -60,6 +60,7 @@ use LedgerSMB::Form;
 use LedgerSMB::Locale;
 use LedgerSMB::Auth;
 use LedgerSMB::CancelFurtherProcessing;
+use LedgerSMB::App_State;
 use Data::Dumper;
 
 our $logger=Log::Log4perl->get_logger('old-handler-chain');#make logger available to other old programs
@@ -78,6 +79,8 @@ $script = substr( $0, $pos + 1 );
 
 $locale = LedgerSMB::Locale->get_handle( ${LedgerSMB::Sysconfig::language} )
   or $form->error( __FILE__ . ':' . __LINE__ . ": Locale not loaded: $!\n" );
+
+
 
 # we use $script for the language module
 $form->{script} = $script;
@@ -134,6 +137,8 @@ if ($myconfig{language}){
     $locale   = LedgerSMB::Locale->get_handle( $myconfig{language} )
       or $form->error( __FILE__ . ':' . __LINE__ . ": Locale not loaded: $!\n" );
 }
+
+$LedgerSMB::App_State::Locale = $locale;
 # pull in the main code
 $logger->trace("trying script=bin/$form->{script} action=$form->{action}");#trace flow
 try {
